# plot_MH_curve

./: CMakeLists.txt  F1cpu.sh  data_mv.sh  diroutput  local_machine_exe.sh  main.cpp  main.sh  main_app  many_target.sh  terminal_output_12_chain.txt  terminal_output_chain_12.txt  terminal_output_chain_16.txt  terminal_output_kagome_27.txt  terminal_output_kagome_36.txt
Subsystem_Sz/: CMakeLists.txt
Subsystem_Sz/include/: Int_Hamiltonian.hpp  Iso_Hamiltonian.hpp  Jset.hpp  MEIGEN.hpp  Subsystem_Sz.hpp  Tot_Sz.hpp
Subsystem_Sz/src/: Int_Hamiltonian.cpp  Iso_Hamiltonian.cpp  Jset.cpp  MEIGEN.cpp  Subsystem_Sz.cpp  Tot_Sz.cpp
data_edit/src/: data_edit.sh  data_edit_27site.sh  data_edit_36site.sh  extract_27sites_upstate.sh  extract_36site_upstate.sh  extract_36sites_upstate.sh  extract_nn_27sites.sh  extract_nn_36sites.sh
gnuplot/: gnuplot_MHcurve.sh  gnuplot_plateau_width.sh  plot_MH_curve.plt  set_file.sh
gnuplot/src/: gnuplot_MHcurve.sh  gnuplot_compared.sh  gnuplot_plateau_width_multiplot.sh  gnuplot_plateau_width_typeI.sh  gnuplot_plateau_width_typeII.sh  set_file.sh  string.plt
gnuplot/src/calc_MH_data/: calc_MH_data  calc_MH_data.cpp  calc_MH_data.sh  calc_MH_data.sh~  calc_MHl_data.sh
gnuplot/src/merge_eval_data/: merge_eval_data.cpp  merge_eval_data.sh
make_kagome_gif/: 27site.jl  36site.jl  main.jl
make_kagome_gif/img/Ykapellasite/36site/real/: system_info.txt
make_kagome_gif/settings/36site/Ykapellasite/distorted_1_01_1/: system_info.txt
make_kagome_gif/settings/36site/Ykapellasite/jred/param10/: system_info.txt
make_kagome_gif/settings/36site/Ykapellasite/jred/param5/: system_info.txt
make_kagome_gif/settings/36site/Ykapellasite/jred/param6/: system_info.txt
make_kagome_gif/settings/36site/Ykapellasite/jred/param7/: system_info.txt
make_kagome_gif/settings/36site/Ykapellasite/jred/param8/: system_info.txt
make_kagome_gif/settings/36site/Ykapellasite/jred/param9/: system_info.txt
make_kagome_gif/src/: kagome_spinrel.jl
sc_bash_script/: F1cpu.sh  setting.sh
settings/: system_info.txt
trash/: main.sh  many_target.sh
